--- a/modules/contract_group/locale/fr_FR.po
+++ b/modules/contract_group/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -56,7 +56,7 @@ msgstr "Groupe"
 
 msgctxt "view:contract.covered_element:"
 msgid "Covered Element"
-msgstr "Elément Couvert"
+msgstr "Risque Couvert"
 
 msgctxt "view:contract:"
 msgid "Enrollments"
