--- a/modules/clause/locale/fr_FR.po
+++ b/modules/clause/locale/fr_FR.po
@@ -3,128 +3,128 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:clause,code:"
-msgid ""
-msgstr ""
+msgid "Code"
+msgstr "Code"
 
 msgctxt "field:clause,create_date:"
-msgid ""
-msgstr ""
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:clause,create_date_:"
-msgid ""
-msgstr ""
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:clause,create_uid:"
-msgid ""
-msgstr ""
+msgid "Create User"
+msgstr "Créé par"
 
 msgctxt "field:clause,current_rec_name:"
-msgid ""
-msgstr ""
+msgid "Current Value"
+msgstr "Valeur Courante"
 
 msgctxt "field:clause,id:"
-msgid ""
-msgstr ""
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:clause,kind:"
-msgid ""
-msgstr ""
+msgid "Kind"
+msgstr "Type"
 
 msgctxt "field:clause,may_be_overriden:"
-msgid ""
-msgstr ""
+msgid "May be Overriden"
+msgstr "Customisable"
 
 msgctxt "field:clause,must_expand_tree:"
-msgid ""
-msgstr ""
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
 
 msgctxt "field:clause,name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause,rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause,title:"
-msgid ""
-msgstr ""
+msgid "Title"
+msgstr "Titre"
 
 msgctxt "field:clause,versions:"
-msgid ""
-msgstr ""
+msgid "Versions"
+msgstr "Versions"
 
 msgctxt "field:clause,write_date:"
-msgid ""
-msgstr ""
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:clause,write_uid:"
-msgid ""
-msgstr ""
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:clause,xml_id:"
-msgid ""
-msgstr ""
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:clause.version,content:"
-msgid ""
-msgstr ""
+msgid "Content"
+msgstr "Contenu"
 
 msgctxt "field:clause.version,create_date:"
-msgid ""
-msgstr ""
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.version,create_date_:"
-msgid ""
-msgstr ""
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.version,create_uid:"
-msgid ""
-msgstr ""
+msgid "Create User"
+msgstr "Créé par"
 
 msgctxt "field:clause.version,end_date:"
-msgid ""
-msgstr ""
+msgid "End Date"
+msgstr "Date de Fin"
 
 msgctxt "field:clause.version,id:"
-msgid ""
-msgstr ""
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:clause.version,main_elem:"
-msgid ""
-msgstr ""
+msgid "Descriptor"
+msgstr "Descripteur"
 
 msgctxt "field:clause.version,must_expand_tree:"
-msgid ""
-msgstr ""
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
 
 msgctxt "field:clause.version,rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause.version,start_date:"
-msgid ""
-msgstr ""
+msgid "Start Date"
+msgstr "Date de Début"
 
 msgctxt "field:clause.version,write_date:"
-msgid ""
-msgstr ""
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:clause.version,write_uid:"
-msgid ""
-msgstr ""
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:clause.version,xml_id:"
-msgid ""
-msgstr ""
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "model:clause,name:"
-msgid ""
-msgstr ""
+msgid "Clause"
+msgstr "Clause"
 
 msgctxt "model:clause.version,name:"
-msgid ""
-msgstr ""
+msgid "Clause Version"
+msgstr "Version de Clause"
 
 msgctxt "model:ir.action,name:act_model_clause"
 msgid "Clauses"
