--- a/modules/clause_insurance/locale/fr_FR.po
+++ b/modules/clause_insurance/locale/fr_FR.po
@@ -7,140 +7,144 @@ msgid "You can not have 2 business rules that overlaps!"
 msgstr "2 règles se chevauchent!"
 
 msgctxt "field:clause.rule,clauses:"
-msgid ""
-msgstr ""
+msgid "Clauses"
+msgstr "Clauses"
 
 msgctxt "field:clause.rule,config_kind:"
-msgid ""
-msgstr ""
+msgid "Conf. kind"
+msgstr "Type de Conf."
 
 msgctxt "field:clause.rule,create_date:"
-msgid ""
-msgstr ""
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.rule,create_date_:"
-msgid ""
-msgstr ""
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.rule,create_uid:"
-msgid ""
-msgstr ""
+msgid "Create User"
+msgstr "Créé par"
 
 msgctxt "field:clause.rule,end_date:"
-msgid ""
-msgstr ""
+msgid "To Date"
+msgstr "Date de Fin"
 
 msgctxt "field:clause.rule,id:"
-msgid ""
-msgstr ""
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:clause.rule,must_expand_tree:"
-msgid ""
-msgstr ""
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
+
+msgctxt "field:clause.rule,name:"
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause.rule,offered:"
-msgid ""
-msgstr ""
+msgid "Offered"
+msgstr "Offre"
 
 msgctxt "field:clause.rule,rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause.rule,rule:"
-msgid ""
-msgstr ""
+msgid "Rule Engine"
+msgstr "Moteur de Règle"
 
 msgctxt "field:clause.rule,rule_extra_data:"
-msgid ""
-msgstr ""
+msgid "Rule Extra Data"
+msgstr "Paramètres de Rêgle"
 
 msgctxt "field:clause.rule,start_date:"
-msgid ""
-msgstr ""
+msgid "From Date"
+msgstr "Date de Début"
 
 msgctxt "field:clause.rule,template:"
-msgid ""
-msgstr ""
+msgid "Template"
+msgstr "Modèle"
 
 msgctxt "field:clause.rule,template_behaviour:"
-msgid ""
-msgstr ""
+msgid "Template Behaviour"
+msgstr "Comportement du Modèle"
 
 msgctxt "field:clause.rule,view_rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause.rule,write_date:"
-msgid ""
-msgstr ""
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:clause.rule,write_uid:"
-msgid ""
-msgstr ""
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:clause.rule,xml_id:"
-msgid ""
-msgstr ""
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:clause.rule-clause,clause:"
-msgid ""
-msgstr ""
+msgid "Clause"
+msgstr "Clause"
 
 msgctxt "field:clause.rule-clause,create_date:"
-msgid ""
-msgstr ""
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.rule-clause,create_date_:"
-msgid ""
-msgstr ""
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:clause.rule-clause,create_uid:"
-msgid ""
-msgstr ""
+msgid "Create User"
+msgstr "Créé par"
 
 msgctxt "field:clause.rule-clause,id:"
-msgid ""
-msgstr ""
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:clause.rule-clause,rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:clause.rule-clause,rule:"
-msgid ""
-msgstr ""
+msgid "Rule"
+msgstr "Règle"
 
 msgctxt "field:clause.rule-clause,write_date:"
-msgid ""
-msgstr ""
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:clause.rule-clause,write_uid:"
-msgid ""
-msgstr ""
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:clause.rule-clause,xml_id:"
-msgid ""
-msgstr ""
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "field:offered,clause_rules:"
-msgid ""
-msgstr ""
+msgid "Clause Rules"
+msgstr "Clauses"
 
 msgctxt "field:offered.option.description,clause_rules:"
-msgid ""
-msgstr ""
+msgid "Clause Rules"
+msgstr "Clauses"
 
 msgctxt "field:offered.product,clause_rules:"
-msgid ""
-msgstr ""
+msgid "Clause Rules"
+msgstr "Clauses"
 
 msgctxt "model:clause.rule,name:"
-msgid ""
-msgstr ""
+msgid "Clause Rule"
+msgstr "Clause"
 
 msgctxt "model:clause.rule-clause,name:"
-msgid ""
-msgstr ""
+msgid "Rule Clause Relation"
+msgstr "Table intermédiaire entre l'offre et le clause"
 
 msgctxt "selection:clause.rule,config_kind:"
 msgid "Advanced"
@@ -152,7 +156,7 @@ msgstr "Simple"
 
 msgctxt "selection:clause.rule,offered:"
 msgid "Option Description"
-msgstr "Garantie offerte"
+msgstr "Offre"
 
 msgctxt "selection:clause.rule,offered:"
 msgid "Product"
@@ -168,7 +172,7 @@ msgstr "Compléter"
 
 msgctxt "selection:clause.rule,template_behaviour:"
 msgid "Remove"
-msgstr "Retirer"
+msgstr "Remplacer"
 
 msgctxt "view:clause.rule:"
 msgid "Clause rule"
