--- a/modules/contract_clause/locale/fr_FR.po
+++ b/modules/contract_clause/locale/fr_FR.po
@@ -3,72 +3,76 @@ msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:contract,clauses:"
-msgid ""
-msgstr ""
+msgid "Clauses"
+msgstr "Clauses"
+
+msgctxt "field:contract,possible_clauses:"
+msgid "Possible clauses"
+msgstr "Clauses possibles"
 
 msgctxt "field:contract.clause,clause:"
-msgid ""
-msgstr ""
+msgid "Clause"
+msgstr "Clause"
 
 msgctxt "field:contract.clause,contract:"
-msgid ""
-msgstr ""
+msgid "Contract"
+msgstr "Contrat"
 
 msgctxt "field:contract.clause,create_date:"
-msgid ""
-msgstr ""
+msgid "Create Date"
+msgstr "Date de Création"
 
 msgctxt "field:contract.clause,create_date_:"
-msgid ""
-msgstr ""
+msgid "Creation date"
+msgstr "Date de Création"
 
 msgctxt "field:contract.clause,create_uid:"
-msgid ""
-msgstr ""
+msgid "Create User"
+msgstr "Créé par"
 
 msgctxt "field:contract.clause,id:"
-msgid ""
-msgstr ""
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:contract.clause,kind:"
-msgid ""
-msgstr ""
+msgid "Kind"
+msgstr "Type"
 
 msgctxt "field:contract.clause,must_expand_tree:"
-msgid ""
-msgstr ""
+msgid "Must Expand Tree"
+msgstr "Must Expand Tree"
 
 msgctxt "field:contract.clause,override_text:"
-msgid ""
-msgstr ""
+msgid "Override Text"
+msgstr "Texte customisable"
 
 msgctxt "field:contract.clause,rec_name:"
-msgid ""
-msgstr ""
+msgid "Name"
+msgstr "Nom"
 
 msgctxt "field:contract.clause,text:"
-msgid ""
-msgstr ""
+msgid "Text"
+msgstr "Texte"
 
 msgctxt "field:contract.clause,visual_text:"
-msgid ""
-msgstr ""
+msgid "Clause Text"
+msgstr "Texte de la Clause"
 
 msgctxt "field:contract.clause,write_date:"
-msgid ""
-msgstr ""
+msgid "Write Date"
+msgstr "Date de mise à jour"
 
 msgctxt "field:contract.clause,write_uid:"
-msgid ""
-msgstr ""
+msgid "Write User"
+msgstr "Mis à jour par"
 
 msgctxt "field:contract.clause,xml_id:"
-msgid ""
-msgstr ""
+msgid "XML Id"
+msgstr "Identifiant XML"
 
 msgctxt "model:contract.clause,name:"
-msgid ""
-msgstr ""
+msgid "Contract Clause"
+msgstr "Clauses du contrat"
 
 msgctxt "view:contract.clause:"
 msgid "Clauses"
